// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render the more icon ellipsis if no valid id and icon URL are provided 1`] = `
<Tooltip
  position="middle-left"
  text="test title"
>
  <PlainButton
    className="bdl-AdditionalTab"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      color="#999ea4"
    />
  </PlainButton>
</Tooltip>
`;

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render the placeholder when an error occurs 1`] = `
<Tooltip
  position="middle-left"
  text="test title"
>
  <PlainButton
    className="bdl-AdditionalTab"
    onClick={[Function]}
    type="button"
  >
    <AdditionalTabPlaceholder
      isLoading={false}
    />
  </PlainButton>
</Tooltip>
`;

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render the tooltip and button contents 1`] = `
<Tooltip
  position="middle-left"
  text="test title"
>
  <PlainButton
    className="bdl-AdditionalTab"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="test title"
      className="bdl-AdditionalTab-icon"
      onError={[Function]}
      src="https://foo.com/image"
    />
  </PlainButton>
</Tooltip>
`;
